# rust-mcp

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: auth.rs  browser.rs  config.rs  error.rs  main.rs  supabase.rs
