[package]
name = "rust-mcp"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI for Machine Control Protocol (MCP) with Supabase authentication"
authors = ["Aloshy AI"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation
headless_chrome = "1.0.5"  # For browser automation

# Local storage
dirs = "5.0"               # For finding config directory
keyring = "2.0"            # For secure credential storage

# Error handling
thiserror = "1.0"          # For custom error types
anyhow = "1.0"             # For easy error handling

# Utilities
url = "2.4"                # URL parsing and manipulation
dotenv = "0.15"            # For loading .env files
rand = "0.8"               # For generating random state values
open = "5.0"               # For opening URLs in the browser
